--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -14,164 +14,34 @@
     font-size: 1rem;
     text-align: center;
     align-items: center;
-    // .tabs {
-    //     align-items: stretch;
-    //     display: flex;
-    //     font-size: 1rem;
-    //     font-weight: 400;
-    //     width: 51rem;
-    //     justify-content: space-between;
-    //     overflow: hidden;
-    //     overflow-x: auto;
-    //     white-space: nowrap;
-    //     ul {
-    //         align-items: center;
-    //         border-bottom-color: #dbdbdb;
-    //         border-bottom-style: solid;
-    //         border-bottom-width: 1px;
-    //         display: flex;
-    //         flex-grow: 1;
-    //         flex-shrink: 0;
-    //         justify-content: flex-start;
-    //     }
-    // }
-    .user-status {
-        position: absolute;
-        top: 0.5rem;
-        left: 0.5rem;
-        padding: 0.5rem;
-        border: 2px solid #ccc;
-        border-image: url("/icons/border2.png") 81 40/60px 50px/0.5rem round;
-        height: 25rem;
-        width: 25rem;
-        display: flex;
-        flex-direction: column;
-        .lv {
-            cursor: pointer;
-            // border: 2px solid #ccc;
-            height: 4rem;
-            width: 100%;
-            padding-left: 0.2rem;
-            // margin-bottom: 0.5rem;
-            display: flex;
-            .value {
-              display: flex;
-              justify-content: space-around;
-              font-weight: bold;
-              text-align: center;
-              align-items: center;
-              flex: 1;
-            }
-        }
-        .hpmp {
-            cursor: pointer;
-            // border: 2px solid #ccc;
-            height: 4rem;
-            width: 100%;
-            padding-left: 2rem;
-            padding-right: 2rem;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        .other {
-            width: 100%;
-            flex: 1;
-            padding: 0.1rem;
-            // border: 2px solid #ccc;
-            margin-top: 0.06rem;
-            flex-wrap: wrap;
-            display: flex;
-            img {
-                width: 2.5rem;
-                height: 2.5rem;
-            }
-            & > div,
-            .item {
+    .nav {
+        // background-color: #ccc;
+        width: 51rem;
+        .nav-item {
+            .nav-link {
                 cursor: pointer;
-                width: 33.3%;
-                padding-top: 0.3rem;
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-                flex-direction: column;
-                .value {
-                    margin-top: 0.3rem;
-                    font-size: 1rem;
-                    flex: 1;
-                    display: flex;
-                    align-items: center;
-                    text-align: center;
-                    .reducePercent {
-                        margin-top: -0.3rem;
-                        font-size: 0.75rem;
-                    }
-                }
+                margin-bottom: -1px;
+                border: 1px solid transparent;
+                border-top-left-radius: .25rem;
+                border-top-right-radius: .25rem;
+                color: rgba(255, 255, 255, 0.795);
             }
-            .item {
-                width: 100%;
+            .nav-link:hover {
+                color: rgb(255, 255, 255);
+            }
+            .active {
+                color: #495057;
+                background-color: #fff;
+            }
+            .active:hover {
+                color: #495057;
             }
         }
     }
-    .user-item {
-        position: absolute;
-        top: 0.5rem;
-        left: 26rem;
-        border: 2px solid #ccc;
-        border-image: url("/icons/border2.png") 81 40/60px 50px/0.5rem round;
-        height: 25rem;
-        width: 25rem;
-        display: flex;
-        flex-direction: column;
-        padding: 0.5rem;
-        cursor: pointer;
-        .uii {
-            display: flex;
-            width: calc(100% -0.4rem);
-        }
-        .equips {
-            margin: 0rem 1rem;
-            width: 100%;
-            height: 100%;
-            flex: 1;
-            flex-wrap: wrap;
-            display: flex;
-            .equip {
-                width: 45%;
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-                flex-direction: row;
-                .title {
-                    padding: 0.05rem;
-                    width: 100%;
-                    height: 5rem;
-                    .icon {
-                        width: 4rem;
-                        height: 4rem;
-                        background-color: #000;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        margin: auto;
-                        border-radius: 0.3rem;
-                        img {
-                            width:4rem;
-                            height:4rem;
-                            border-radius: 1rem;
-                        }
-                    }
-                    .name {
-                        font-size: 0.85rem;
-                        height: 1rem;
-                        margin-top: 0.5rem;
-                        line-height: 1rem;
-                    }
-                }
-            }
-        }
+    .nav-tabs {
+        // border-right: 1px solid #dee2e6;
+        // border-bottom-right-radius: 0.25rem;
+        border-bottom: 1px solid #e6e5de;
     }
     .sysInfo {
         position: absolute;
