怪物属性调整

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -252,4 +252,14 @@
     .scrollbar-square::-webkit-scrollbar-track {
         border-radius: 0px; 
     }
+
+    .glow{  
+        animation: glowing 1500ms infinite;
+    }
+
+    @keyframes glowing {
+    0% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
+    50% { background-color: #FF0000; box-shadow: 0 0 40px #FF0000; }
+    100% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
+    }
 }
