--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -216,6 +216,14 @@
                 text-shadow: 1px 1px 3px rgb(0, 0, 0);
             }
         }
+        .menu {
+            height: 3rem;
+            width: 3rem;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
     .displayEquip {
         position: absolute;
