--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -208,6 +208,7 @@
         padding: 0.1rem;
         border-top-right-radius: 0.1rem;
         display: flex;
+        z-index: 10;
         & > div {
                 display: flex;
                 align-items: center;
