--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -494,6 +494,7 @@
             font-size: 0.8rem;
             line-height: 0;
             text-align: right;
+            color: #ffffff;
             text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
         }
     }
@@ -526,5 +527,31 @@
     }
     tr:nth-of-type(even) td{
         background-color: #2b2b2b;
+    }
+    .close {
+        position: absolute;
+        right: 10px;
+        top: 5px;
+        width: 32px;
+        height: 32px;
+        opacity: 0.7;
+        z-index: 6;
+    }
+    .close:hover {
+        opacity: 1;
+    }
+    .close:before, .close:after {
+        position: absolute;
+        left: 15px;
+        content: ' ';
+        height: 33px;
+        width: 2px;
+        background-color: rgb(255, 255, 255);
+    }
+    .close:before {
+        transform: rotate(45deg);
+    }
+    .close:after {
+        transform: rotate(-45deg);
     }
 }
