完善新手任务，调整任务样式

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -48,7 +48,8 @@ body {
 }
 #app {
   // font-family: 'NotoSansSC','Noto Sans','Source Sans Pro','Avenir', Helvetica, Arial, sans-serif !important;
-  font-family:'sarasa','JetBrainsMono','NotoSansSC','Noto Sans','Source Sans Pro','Avenir', Helvetica, Arial, sans-serif !important;
+  // font-family:'sarasa','JetBrainsMono','NotoSansSC','Noto Sans','Source Sans Pro','Avenir', Helvetica, Arial, sans-serif !important;
+  font-family: 'serif','NotoSansSC','Noto Sans','Source Sans Pro','Avenir', Helvetica, Arial, sans-serif !important;
 }
 // div,button,span,p,h1,h2,h3,h4,h5,b,input,textarea{
 //   font-family:'sarasa','JetBrainsMono','NotoSansSC','Noto Sans','Source Sans Pro','Avenir', Helvetica, Arial, sans-serif !important;
