--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -559,4 +559,64 @@
         background-size: contain;
         margin-top: -4px;
     }
+    
+    .addonGrid {
+        display: flex;
+        flex-direction: row;
+        left: 0;
+        right: 0;
+        justify-content: center;
+        .icon {
+            position: relative;
+            width: 40px;
+            height: 40px;
+            margin: 1px;
+            img {
+                width: 38px;
+                height: 38px;
+            }
+            .quantity {
+                position: relative;
+                top: -0.6rem;
+                right: -0.8rem;
+                width: 2rem;
+                height: 0.5rem;
+                font-size: 0.8rem;
+                line-height: 0;
+                text-align: right;
+                text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+            }
+            .addonTips {    
+                visibility: hidden;
+                border-radius: 8px;
+                background: #111;
+                position: absolute;
+                z-index: 3;
+                top: 50px;
+                left: -130px;
+                width: 300px;
+                padding: 10px;
+                box-shadow: 0 6px 11px #000000;
+                border: 1px solid #333;
+                .desc {
+                    text-align: left;
+                }
+                .preReq {
+                    text-align: left;
+                    margin-top: 1rem;
+                    .detail {
+                        margin-left: 2rem;
+                    }
+                }
+                .footnote {
+                    margin-top: 1rem;
+                    color: #ccc;
+                    font-size: 0.8rem;
+                }
+            }
+        }
+        .icon:hover .addonTips {
+            visibility: visible;
+        }
+    }
 }
