添加重置天赋按钮

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -619,4 +619,11 @@
             visibility: visible;
         }
     }
+    .refresh{
+        background-image: url("/icons/ui/refresh.png");
+        background-size: cover;
+        width: 25px;
+        height: 25px;
+        float: right;
+    }
 }
