修改提示框css class，dmged改为danger

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -103,7 +103,7 @@
                 justify-content: flex-start;
             }
         } 
-        .dmged > span {
+        .danger > span {
             color: #f90202;
         }
         .dmg > span {
