--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -183,7 +183,7 @@
         bottom: 7px;
         background: rgba($color: #fff, $alpha: 0.4);
         left: 7px;
-        width: 200px;
+        width: 250px;
         padding: 2px;
         display: flex;
         z-index: 10;
@@ -624,5 +624,107 @@
         background-size: cover;
         width: 25px;
         height: 25px;
+    }
+    .equipPanel {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        height: 28rem;
+        width: 48rem;
+        background-image: url("/icons/ui/enhancePanel2.png");
+        background-repeat: no-repeat;
+        background-size: 49rem 28rem;
+        z-index: 10;
+        .title {
+            position: absolute;
+            top: 1.4rem;
+            left: 0;
+            right: 0;
+            font-weight: bold;
+            font-size: 1.5rem;
+        }
+        .info {
+            position: absolute;
+            width: 50%;
+            .name {
+                position: relative;
+                top: 11rem;
+                left: 2.5rem;
+            }
+            .largeIconContainer {
+                position: relative;
+                top: 12rem;
+                left: 2.5rem;
+            }
+            .enhanceLv {
+                position: relative;
+                top: 200px;
+                left: 35px;
+                .progress {
+                    width: 200px;
+                    margin: auto;
+                    height: 3px;
+                }
+            }
+        }
+        .enhance {
+            position: absolute;
+            margin-left: 55%;
+            margin-top: 10%;
+            width: 50%;
+            height: 55%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .beforeEnhance {
+                margin-left: 1rem;
+                text-align: left;
+                .bonus {
+                    color: #0f0;
+                }
+            }
+        }
+        .warning {
+            color: #D8000C;
+        }
+        .confirm {
+            position: absolute;
+            top: 21rem;
+            left: 35rem;
+            height: 2.5rem;
+            width: 8rem;
+            background-image: url("/icons/ui/button.png");
+            background-repeat: no-repeat;
+            background-size: 8rem 2.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.3rem;
+            opacity: 0.8; 
+            &:hover {
+                opacity: 1; 
+            }
+        }
+        .cancel {
+            position: absolute;
+            top: 24rem;
+            left: 35rem;
+            height: 2.5rem;
+            width: 8rem;
+            background-image: url("/icons/ui/button.png");
+            background-repeat: no-repeat;
+            background-size: 8rem 2.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.3rem;
+            opacity: 0.8; 
+            &:hover {
+                opacity: 1; 
+            }
+        }
     }
 }
