修改css class，避免css冲突

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -770,7 +770,7 @@
         border-bottom: 2px solid transparent;
         animation: animINP 5s linear infinite,animBTN 5s linear infinite;;
     }
-    .confirm {
+    .nameConfirm {
         position: relative;
         display: block;
         padding: auto;
