添加sticky position，避免滚动影响thead

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -507,6 +507,8 @@
         border: 1px solid #494745;
         border-bottom: none;
         background-color: #231f1b;
+        position: sticky;
+        top: 0;
     }
     tr {
         height: 20px;
