--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,6 +2,22 @@
     box-sizing: border-box;
     user-select: none;
   }
+  
+.equipGrey {    
+    color: #9D9D9D;
+}
+.equipGreen {    
+    color: #1EFF00;
+}
+.equipBlue {    
+    color: #0070DD;
+}
+.equipPurple {    
+    color: #9345FF;
+}
+.equipOrange {    
+    color: #FF8000;
+}
 .main {
     position: absolute;
     background-color: #000;
