新增：强化装备自动添加强化石选项

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -708,41 +708,32 @@
         .warning {
             color: #D8000C;
         }
-        .confirm {
+        .actions {
             position: absolute;
-            top: 21rem;
             left: 35rem;
             height: 2.5rem;
             width: 8rem;
-            background-image: url("/icons/ui/button.png");
-            background-repeat: no-repeat;
-            background-size: 8rem 2.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.3rem;
+        }
+        .image_button {
+            background-image: url("/icons/ui/button.png");
+            background-repeat: no-repeat;
+            background-size: 8rem 2.5rem;
             opacity: 0.8; 
             &:hover {
                 opacity: 1; 
             }
         }
+        .check_box {
+            top: 19rem;
+        }
+        .confirm {
+            top: 21rem;
+        }
         .cancel {
-            position: absolute;
             top: 24rem;
-            left: 35rem;
-            height: 2.5rem;
-            width: 8rem;
-            background-image: url("/icons/ui/button.png");
-            background-repeat: no-repeat;
-            background-size: 8rem 2.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.3rem;
-            opacity: 0.8; 
-            &:hover {
-                opacity: 1; 
-            }
         }
     }
     .vertical-nav-item {
