--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -493,7 +493,6 @@ tr:nth-of-type(even) td{
     bottom: 7px;
     background: rgba($color: #fff, $alpha: 0.4);
     left: 7px;
-    width: 250px;
     padding: 2px;
     display: flex;
     z-index: 10;
@@ -505,8 +504,9 @@ tr:nth-of-type(even) td{
         justify-content: left;
     }
     .menu {
-        height: 42px;
-        width: 42px;
+        height: 45px;
+        width: 45px;
+        padding: 3px;
         img {
             width: 100%;
             height: 100%;
