--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -191,7 +191,7 @@
 .grid {
     border: 1px solid rgb(72, 70, 63);
     border-radius: 0.3rem;
-    margin: 2px;
+    // margin: 2px;
     height: 3rem;
     width: 3rem;
     .quantity {
@@ -205,6 +205,37 @@
         color: #ffffff;
         text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
     }
+}
+.description {
+    font-size: 12px;
+    margin: 0.5rem 1rem 0rem 1rem;
+    padding: 0.5rem 0rem;
+    border-top: 1px solid #777;
+    text-align: left;
+    .type {
+        padding-bottom: 0.5rem;
+    }
+    .baseEntry {
+        padding-bottom: 0.5rem;
+        text-align: left;
+    }
+    .extraEntry {
+        color: #ABF6F4;
+        border-top: 1px dotted #777;
+        padding: 0.5rem 0rem;
+        text-align: left;
+    }
+    .potential {
+        padding: 0.5rem 0rem;
+        border-top: 1px dotted #777;
+    }
+}
+.desc {
+    color: #777;
+    padding-bottom: 0.5rem;
+    margin: 0rem 1rem;
+    text-align: left;
+    font-size: 12px;
 }
 table {
     width: 100%;
@@ -223,9 +254,7 @@ th {
     border-top-right-radius: 5px;
     padding-left: 7px;
     text-align: left;
-    border: 1px solid #494745;
     border-bottom: none;
-    background-color: #231f1b;
     position: sticky;
     top: 0;
 }
